# DiDi-Challenge-2017

./: .gitignore  Calibration.py  FeatureVectorEncoderLidarBV.py  Generator.py  KittiLabel.py  KittiTracklet.py  Labels.py  README.md  Tracklet.py  Training.py  Utils.py  VectorMath.py  drawing.py  imageutils.py  lidar_bv_loss.py  render_birdseye_view.py  render_features.py  render_prediction.py  renderutils.py  test.py  train-lidar-bv-network.py
MV3DFeatures/: README.md  setup.py
MV3DFeatures/MV3DFeatures/: MV3DFeatures.py  __init__.py
MV3DFeatures/src/: CMakeLists.txt  _MV3DFeatures.cpp
util/: raw_data_downloader.sh
utils/: unzip_kitti.py
